FIX: 修改文件层级

--- a/hr_index.html
+++ b/hr_index.html
@@ -284,7 +284,7 @@
             <span id="noticeContent"></span>
         </div>
     </div>
-    <img id="lotteryName" src="">
+    <img id="lotteryName" src="./static/img/lottery2.png">
     <div class="contentPage">
         <iframe id="lotteryFrame" name="lotteryFrame" style="position:relative;" src="" width="100%" height="100%"
                 frameborder="0" scroll="auto"></iframe>
