--- a/ss_index.html
+++ b/ss_index.html
@@ -8,14 +8,14 @@
 		<meta http-equiv="Cache" content="no-cache">		
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=0.28, maxmum-scale=1.0, minimum-scale=0.28">
 		<title></title>
-		<link href="../static/css/ss_common.css" rel="stylesheet" />
-		<link href="../static/css/ss_index.css" rel="stylesheet" />
-		<script src="../static/js/lib/jquery.min.js"></script>
-		<script src="../static/js/config/config.js"></script>
-		<script src="../static/js/config/localConfig.js"></script>
-		<script src="../static/js/config/networkConfig.js"></script>
-		<script src="../static/js/sendAjax.js"></script>
-		<script src="../static/js/ss_index.js"></script>
+		<link href="/static/css/ss_common.css" rel="stylesheet" />
+		<link href="/static/css/ss_index.css" rel="stylesheet" />
+		<script src="/static/js/lib/jquery.min.js"></script>
+		<script src="/static/js/config/config.js"></script>
+		<script src="/static/js/config/localConfig.js"></script>
+		<script src="/static/js/config/networkConfig.js"></script>
+		<script src="/static/js/sendAjax.js"></script>
+		<script src="/static/js/ss_index.js"></script>
 	</head>
 	<body onresize="resize()">
 		<div class="top">
