--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>搜索</title>
     <script type="text/javascript" src="/static/js/lib/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/js/config/config.js"></script>
+    <script type="text/javascript" src="/static/js/config/localConfig.js"></script>
+    <script type="text/javascript" src="/static/js/config/networkConfig.js"></script>
+    <script type="text/javascript" src="/static/js/sendAjax.js"></script>
+    <script type="text/javascript" src="/static/js/checkCode.js"></script>
 </head>
 <body>
         <style type="text/css">
@@ -40,12 +45,6 @@
                 <button type="submit" id="Search" style="height:35px;width:50px;font-size:15px;background:#0099CC;color:#FFF;border:0px;cursor:pointer;" onclick="verifCode()">确认</button>
             </div>
         </div>
-<script>
-    function verifCode() {
-        window.open('home.html', '_self')
-
-    }
-</script>
 
 
 </body></html>
