--- a/login.html
+++ b/login.html
@@ -55,10 +55,10 @@
                     <td height="113" background="/static/img/login_2.jpg">
                         <div style="position:relative; width:969px; height:113px;">
                             <div style="position:absolute; left:515px;">
-                                <input value="huazai" name="txt_U_name" id="txt_U_name" tabindex="1" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text">
+                                <input value="" name="txt_U_name" id="txt_U_name" tabindex="1" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text">
                             </div>
                             <div style="position:absolute; left:515px; top:30px;">
-                                <input value="123456" name="txt_U_Password" id="txt_U_Password" tabindex="2" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="password">
+                                <input value="" name="txt_U_Password" id="txt_U_Password" tabindex="2" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="password">
                             </div>
                             <div style="position:absolute; left:515px; top:60px;">
                                 <input name="txt_validate" id="txt_validate" tabindex="3" style="border: 1px rgb(128, 128, 128) solid; width: 60px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text" maxlength="4">
