FIX: 去掉切换游戏二次确认和右侧游戏logo

--- a/ss_six.html
+++ b/ss_six.html
@@ -58,7 +58,7 @@
 				</div>
 			</div>
 		</div>
-		<img id="lotteryName" src="./static/img/lottery2.png">
+		<!-- <img id="lotteryName" src="./static/img/lottery2.png"> -->
 		<div id="numPanel" class="systemTable" info="">
 			<div class="numCtrl head">
 				<div class="btn" id="quickBetBtn" onclick="clickQuickBetBtn();">快速下注</div>
