fix: 经典版下注调整

--- a/ss_six.html
+++ b/ss_six.html
@@ -37,24 +37,24 @@
 					<div class="btn" info="1191" onclick="clickLinkCombTypeBtn(4, this)">特串</div>
 				</div>
 				<div class="animalLinkType ctrlBox">
-					<div class="btn curBtn" info="1221" onclick="clickAnimalLinkTypeBtn(2, this)">二肖【中】</div>
-					<div class="btn" info="1231" onclick="clickAnimalLinkTypeBtn(2, this)">二肖【不中】</div>
-					<div class="btn" info="1241" onclick="clickAnimalLinkTypeBtn(3, this)">三肖【中】</div>
-					<div class="btn" info="1251" onclick="clickAnimalLinkTypeBtn(3, this)">三肖【不中】</div>
-					<div class="btn" info="1261" onclick="clickAnimalLinkTypeBtn(4, this)">四肖【中】</div>
-					<div class="btn" info="1271" onclick="clickAnimalLinkTypeBtn(4, this)">四肖【不中】</div>
-					<div class="btn" info="1281" onclick="clickAnimalLinkTypeBtn(5, this)">五肖【中】</div>
-					<div class="btn" info="1291" onclick="clickAnimalLinkTypeBtn(5, this)">五肖【不中】</div>
+					<div class="btn curBtn" info="1221" name="二肖连" onclick="clickAnimalLinkTypeBtn(2, this)">二肖【中】</div>
+					<div class="btn" info="1231" name="二肖连不中" onclick="clickAnimalLinkTypeBtn(2, this)">二肖【不中】</div>
+					<div class="btn" info="1241" name="三肖连" onclick="clickAnimalLinkTypeBtn(3, this)">三肖【中】</div>
+					<div class="btn" info="1251" name="三肖连不中" onclick="clickAnimalLinkTypeBtn(3, this)">三肖【不中】</div>
+					<div class="btn" info="1261" name="四肖连" onclick="clickAnimalLinkTypeBtn(4, this)">四肖【中】</div>
+					<div class="btn" info="1271" name="四肖连不中" onclick="clickAnimalLinkTypeBtn(4, this)">四肖【不中】</div>
+					<div class="btn" info="1281" name="五肖连" onclick="clickAnimalLinkTypeBtn(5, this)">五肖【中】</div>
+					<div class="btn" info="1291" name="五肖连不中" onclick="clickAnimalLinkTypeBtn(5, this)">五肖【不中】</div>
 				</div>
 				<div class="unitLinkType ctrlBox">
-					<div class="btn curBtn" info="1301" onclick="clickUnitLinkTypeBtn(2, this)">二尾【中】</div>
-					<div class="btn" info="1311" onclick="clickUnitLinkTypeBtn(2, this)">二尾【不中】</div>
-					<div class="btn" info="1321" onclick="clickUnitLinkTypeBtn(3, this)">三尾【中】</div>
-					<div class="btn" info="1331" onclick="clickUnitLinkTypeBtn(3, this)">三尾【不中】</div>
-					<div class="btn" info="1341" onclick="clickUnitLinkTypeBtn(4, this)">四尾【中】</div>
-					<div class="btn" info="1351" onclick="clickUnitLinkTypeBtn(4, this)">四尾【不中】</div>
-					<div class="btn" info="1361" onclick="clickUnitLinkTypeBtn(5, this)">五尾【中】</div>
-					<div class="btn" info="1371" onclick="clickUnitLinkTypeBtn(5, this)">五尾【不中】</div>
+					<div class="btn curBtn" info="1301" name="二尾连" onclick="clickUnitLinkTypeBtn(2, this)">二尾【中】</div>
+					<div class="btn" info="1311" name="二尾连不中" onclick="clickUnitLinkTypeBtn(2, this)">二尾【不中】</div>
+					<div class="btn" info="1321" name="三尾连" onclick="clickUnitLinkTypeBtn(3, this)">三尾【中】</div>
+					<div class="btn" info="1331" name="三尾连不中" onclick="clickUnitLinkTypeBtn(3, this)">三尾【不中】</div>
+					<div class="btn" info="1341" name="四尾连" onclick="clickUnitLinkTypeBtn(4, this)">四尾【中】</div>
+					<div class="btn" info="1351" name="四尾连不中" onclick="clickUnitLinkTypeBtn(4, this)">四尾【不中】</div>
+					<div class="btn" info="1361" name="五尾连" onclick="clickUnitLinkTypeBtn(5, this)">五尾【中】</div>
+					<div class="btn" info="1371" name="五尾连不中" onclick="clickUnitLinkTypeBtn(5, this)">五尾【不中】</div>
 				</div>
 			</div>
 		</div>
