FIX: 修改页面初始化限制状态

--- a/hr_six.html
+++ b/hr_six.html
@@ -1866,6 +1866,6 @@
 			</div>
 			<div><div class="btn" onclick="sendBetLink();">确定下注</div><div class="btn" onclick="betLinkCancel();">取消</div></div>
 		</div>
-		<div class="ready">未开盘</div>
+		<div class="ready" style="display: none;">未开盘</div>
 	</body>
 </html>
