FIX: 增加登录弹窗修改密码 开奖明细样式调整

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                 COLOR: black;
             }
             .wrap {
-                padding: 16px;
+                padding: 16px 16px 100px;
                 background: #F3F3F3;
             }
             .text-center {
@@ -52,14 +52,15 @@
             }
             .url-item {
                 position: relative;
-                padding-right: 150px;
+                margin-right: 150px;
             }
             .speed {
                 position: absolute;
                 top: 50%;
-                right: 50px;
+                left: calc(100% + 50px);
                 transform: translateY(-50%);
                 color: red;
+                width: 48px;
             }
         </style>
         <div class="wrap">
