--- a/hr_history.html
+++ b/hr_history.html
@@ -16,6 +16,18 @@
 		<script src="/static/js/sendAjax.js"></script>
 		<script src="/static/js/hr_page.js"></script>
 		<script src="/static/js/hr_history.js"></script>
+		<style>
+			.childrenPage .systemTable {
+				width: 1172px;
+			}
+			.childrenPage .systemTable .dateCell,
+			.childrenPage .systemTable .issueCell {
+				width: 148px;
+			}
+			.childrenPage .systemTable .sumCell {
+				width: 40px;
+			}
+		</style>
 	</head>
 	<body class="childrenPage">
 		<div class="ctrlPanel">
