FIX: 修改开奖结果样式

--- a/hr_history.html
+++ b/hr_history.html
@@ -17,6 +17,7 @@
 		<script src="/static/js/hr_page.js"></script>
 		<script src="/static/js/hr_history.js"></script>
 		<style>
+			.childrenPage .ctrlPanel,
 			.childrenPage .systemTable {
 				width: 1172px;
 			}
