FIX: 修改安全码问题

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="/static/js/config/localConfig.js"></script>
     <script type="text/javascript" src="/static/js/config/networkConfig.js"></script>
     <script type="text/javascript" src="/static/js/sendAjax.js"></script>
+    <script type="text/javascript" src="/static/js/common.js"></script>
     <script type="text/javascript" src="/static/js/checkCode.js"></script>
 </head>
 <body>
