--- a/login.html
+++ b/login.html
@@ -95,47 +95,50 @@
                             <div style="position:absolute; left:515px;">
                                 <b style="
                                     position: absolute;
-                                    right: calc(100% + 4px);
+                                    right: 100%;
                                     top: 3px;
                                     width: 81px;
-                                    font-size: 16px;
+                                    font-size: 18px;
+                                    font-weight: 800;
                                     text-align: right;
                                     background-image: linear-gradient(to top right, #83C1E3, #83C5DF);
                                     box-shadow: 2px 1px 30px 2px #83C5DF;
                                 ">用户名：</b>
                                 
-                                <input value="" name="txt_U_name" id="txt_U_name" tabindex="1" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text">
+                                <input value="" name="txt_U_name" id="txt_U_name" tabindex="1" style="border: 1px rgb(128, 128, 128) solid; width: 190px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text">
                             </div>
                             <div style="position:absolute; left:515px; top:30px;">
                                 <b style="
                                     position: absolute;
-                                    right: calc(100% + 4px);
+                                    right: 100%;
                                     top: 4px;
                                     width: 70px;
-                                    font-size: 16px;
+                                    font-size: 18px;
+                                    font-weight: 800;
                                     text-align: right;
                                     background-image: linear-gradient(to top right, #6CB3D3, #70B5D6);
                                     box-shadow: 2px 1px 30px 2px #70B5D6;
                                 ">密码：</b>
-                                <input value="" name="txt_U_Password" id="txt_U_Password" tabindex="2" style="border: 1px rgb(128, 128, 128) solid; width: 170px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="password">
+                                <input value="" name="txt_U_Password" id="txt_U_Password" tabindex="2" style="border: 1px rgb(128, 128, 128) solid; width: 190px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="password">
                             </div>
                             <div style="position:absolute; left:515px; top:60px;">
                                 <b style="
                                     position: absolute;
-                                    right: calc(100% + 4px);
+                                    right: 100%;
                                     top: 6px;
-                                    width: 70px;
-                                    font-size: 16px;
+                                    width: 76px;
+                                    font-size: 18px;
+                                    font-weight: 800;
                                     text-align: right;
                                     background-image: linear-gradient(to top right, #5498BB, #63A4CA);
                                     box-shadow: 2px 1px 30px 2px #63A4CA;
                                 ">验证码：</b>
                                 <input name="txt_validate" id="txt_validate" tabindex="3" style="border: 1px rgb(128, 128, 128) solid; width: 60px; height: 25px; color: rgb(0,0,0); font-size: 18px; font-weight: bold; background-color: rgb(255, 255, 255);" type="text" maxlength="4">
                             </div>
-                            <div style="position:absolute; left:585px; top:60px; width: 100px; height: 30px; border: 1px solid #ccc; border-radius: 5px;" onclick="draw()">
+                            <div style="position:absolute; left:585px; top:60px; width: 120px; height: 34px; border: 1px solid #ccc; border-radius: 5px;" onclick="draw()">
                                 <img id="verifyCode" src="" alt="" style="width: 100%; height: 100%;">
                             </div>
-                            <div style="position:absolute; left:515px; top:90px;">
+                            <div style="position:absolute; left:515px; top:110px;">
                                 <input id="loginBtn" tabindex="4" class="btn" type="button" value="" onclick="">
                             </div>
                         </div>
