mod: 修改已用金额字段

--- a/hr_index.html
+++ b/hr_index.html
@@ -26,19 +26,19 @@
     <div class="userInfoPanel leftPanel" style="display: none;">
         <div class="userInfoItem">
             <div class="userInfoLable">会员账号</div>
-            <div class="userInfoValue" id="userName">111111</div>
+            <div class="userInfoValue" id="userName"></div>
         </div>
         <div class="userInfoItem">
             <div class="userInfoLable">信用额度</div>
-            <div class="userInfoValue" id="creditAmount">1111111</div>
+            <div class="userInfoValue" id="creditAmount"></div>
         </div>
         <div class="userInfoItem">
             <div class="userInfoLable">已用金额</div>
-            <div class="userInfoValue" id="usedAmount">11111111</div>
+            <div class="userInfoValue" id="usedAmount"></div>
         </div>
         <div class="userInfoItem">
             <div class="userInfoLable">可用金额</div>
-            <div class="userInfoValue" id="balance">11111111</div>
+            <div class="userInfoValue" id="balance"></div>
         </div>
         <div class="userInfoItem">
             <div class="userInfoLable">投注风格</div>
