--- a/hr_six.html
+++ b/hr_six.html
@@ -1092,10 +1092,12 @@
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
+						<div class="numCell"></div>
 						<div class="checkCell"><div class="check" onclick="checkAnimal6(this)" info="0"></div></div>
 					</div>
 					<div class="cell w240">
 						<div class="animalCell">牛</div>
+						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
@@ -1110,10 +1112,12 @@
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
+						<div class="numCell"></div>
 						<div class="checkCell"><div class="check" onclick="checkAnimal6(this)" info="2"></div></div>
 					</div>
 					<div class="cell w240">
 						<div class="animalCell">兔</div>
+						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
@@ -1128,10 +1132,12 @@
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
+						<div class="numCell"></div>
 						<div class="checkCell"><div class="check" onclick="checkAnimal6(this)" info="4"></div></div>
 					</div>
 					<div class="cell w240">
 						<div class="animalCell">蛇</div>
+						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
@@ -1146,10 +1152,12 @@
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
+						<div class="numCell"></div>
 						<div class="checkCell"><div class="check" onclick="checkAnimal6(this)" info="6"></div></div>
 					</div>
 					<div class="cell w240">
 						<div class="animalCell">羊</div>
+						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
@@ -1164,10 +1172,12 @@
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
+						<div class="numCell"></div>
 						<div class="checkCell"><div class="check" onclick="checkAnimal6(this)" info="8"></div></div>
 					</div>
 					<div class="cell w240">
 						<div class="animalCell">鸡</div>
+						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
@@ -1182,10 +1192,12 @@
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
+						<div class="numCell"></div>
 						<div class="checkCell"><div class="check" onclick="checkAnimal6(this)" info="10"></div></div>
 					</div>
 					<div class="cell w240">
 						<div class="animalCell">猪</div>
+						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
 						<div class="numCell"></div>
