--- a/hr_betDetail.html
+++ b/hr_betDetail.html
@@ -31,7 +31,7 @@
 			</div>
 			<div class="row">
 				<div class="cell pageCell">
-					<div class="pageRow"></div>
+					<div class="row pageRow"></div>
 				</div>
 			</div>
 			<div class="row statisticsRow">
