FIX: 强制修改密码

--- a/hr_index.html
+++ b/hr_index.html
@@ -239,7 +239,7 @@
                 <img src="/static/img/hr_systemMenuLine.png">
                 <div class="comMenu"><a onclick="toPage('hr_rule.html', this)">规则</a></div>
                 <img src="/static/img/hr_systemMenuLine.png">
-                <div class="comMenu"><a onclick="toPage('hr_password.html', this)">密码设定</a></div>
+                <div class="comMenu"><a id="system-pwd" onclick="toPage('hr_password.html', this)">密码设定</a></div>
                 <img src="/static/img/hr_systemMenuLine.png">
                 <div class="comMenu"><a onclick="exit()">登出</a></div>
             </div>
