--- a/ss_index.html
+++ b/ss_index.html
@@ -33,7 +33,7 @@
 					<div class="comMenu"><a onclick="toPage('ss_memberInfo.html', this)">会员资料</a></div> |
 					<div class="comMenu"><a onclick="toPage('ss_history.html', this)">开奖结果</a></div> |
 					<div class="comMenu"><a onclick="toPage('ss_rule.html', this)">游戏规则</a></div> |
-					<div class="comMenu"><a onclick="toPage('ss_password.html', this)">密码设定</a></div> |
+					<div class="comMenu"><a id="system-pwd" onclick="toPage('ss_password.html', this)">密码设定</a></div> |
 					<div class="comMenu"><a onclick="exit()">登出</a></div>
 				</div>
 			</div>
