FIX: 1. 重置功能修改 2. 修改密碼后跳轉頁面修改 3. 增加退出接口 4. 下注明细参数错误问题修改 5. 接口增加统一的弹窗提示

--- a/hr_password.html
+++ b/hr_password.html
@@ -17,7 +17,7 @@
 		<script src="/static/js/sendAjax.js"></script>
 		<script src="/static/js/hr_password.js"></script>
 	</head>
-	<body class="childrenPage" onload="console.log('index')" onresize="resize()">
+	<body class="childrenPage" onresize="resize()">
 		<div class="passwordPanel">
 			<div class="inputItem">
 				<div class="inputLabel">旧密码：</div>
@@ -34,7 +34,7 @@
 			</div>
 			<div class="inputItem">
 				<div class="btn" onclick="updatePassword();">确定</div>
-				<div class="btn" onclick="clear();">重置</div>
+				<div class="btn" onclick="clearForm();">重置</div>
 			</div>
 		</div>
 	</body>
